# shelly-logger

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.json
.github/workflows/: main.yml
app/: config.json
app/src/: influx.rs  main.rs  point.rs
src/: config.rs  main.rs  plug.rs
