[package]
name = "shelly-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4" }

# HTTP and Json parsing
ureq = { version = "2", features = ["json", "charset"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0" }


# Logging
log = { version = "0.4", features = ["std", "serde"] }
env_logger = { version = "0.10" }
